--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coconsole",
   "displayName": "Coconsole",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "unity": "2022.2",
   "description": "",
   "dependencies": {
@@ -13,22 +13,22 @@
     {
       "displayName": "Coconsole core",
       "description": "Partial code for roslyn code gen",
-      "path": "~Samples/Core"
+      "path": "Samples/Core"
     },
     {
       "displayName": "Coconsole console",
       "description": "Main console for Coconsole",
-      "path": "~Samples/Coconsole"
+      "path": "Samples/Coconsole"
     },
     {
       "displayName": "Coconsole buttons",
       "description": "Buttons for Coconsole",
-      "path": "~Samples/CoconsoleButtons"
+      "path": "Samples/CoconsoleButtons"
     },
     {
       "displayName": "Coconsole debug",
       "description": "All supported coconsole commands arguments",
-      "path": "~Samples/Debug"
+      "path": "Samples/Debug"
     },
     {
       "displayName": "Coconsole spam",
