--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
     {
       "displayName": "Coconsole core",
       "description": "Partial code for roslyn code gen",
-      "path": "Samples/Core"
+      "path": "Samples~/Core"
     },
     {
       "displayName": "Coconsole console",
       "description": "Main console for Coconsole",
-      "path": "Samples/Coconsole"
+      "path": "Samples~/Coconsole"
     },
     {
       "displayName": "Coconsole buttons",
       "description": "Buttons for Coconsole",
-      "path": "Samples/CoconsoleButtons"
+      "path": "Samples~/CoconsoleButtons"
     },
     {
       "displayName": "Coconsole debug",
       "description": "All supported coconsole commands arguments",
-      "path": "Samples/Debug"
+      "path": "Samples~/Debug"
     },
     {
       "displayName": "Coconsole spam",
       "description": "Console.log spam ",
-      "path": "~Samples/SpamMono"
+      "path": "Samples~/SpamMono"
     }
   ]
 }
