--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coconsole",
   "displayName": "Coconsole",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "unity": "2022.2",
   "description": "",
   "dependencies": {
@@ -10,6 +10,11 @@
     "com.unity.burst": "1.8.18"
   },
   "samples": [
+    {
+      "displayName": "Coconsole core",
+      "description": "Partial code for roslyn code gen",
+      "path": "Samples~/Core"
+    },
     {
       "displayName": "Coconsole console",
       "description": "Main console for Coconsole",
